--- a/src/index.css
+++ b/src/index.css
@@ -476,6 +476,14 @@ color: gray
     cursor: pointer;
 }
 
+.filterItem div:nth-child(2) span small{
+    /* background-color: white; */
+    color: rgb(39, 201, 63);
+    font-weight: 500;
+    padding: 1px 5px;
+    border-radius: 3px;
+}
+
 .setRadius{
     font-size: 10px;
     /* height: 100%; */
@@ -762,6 +770,7 @@ color: gray
     border-radius: 10px;
     height: 50px;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     font-size: 22px;
@@ -774,6 +783,12 @@ color: gray
 }
 .nvBcc:active{
     transform: scale(0.9);
+}
+.typeSlider{
+    width: 50% !important;
+}
+.radiusSlider{
+    width: 50% !important;
 }
 .nvBcd{
     width: 20%;
@@ -806,4 +821,64 @@ color: gray
     letter-spacing: 0.5px;
 }
 
+.otpGen{    
+    width: 30%;
+    border: 1px solid rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
+    height: 100%;
+    padding: 0px 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.OTPVerification{
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: -15px;
+}
+
+.submitOTP{
+    cursor: pointer;
+    color: white;
+    font-weight: 500;
+    width: 20%;
+    height: 100%;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    background: border-box rgba(156, 156, 156, 0.5);
+    transition: all .5s ease;
+}
+
+.submitOTP:active{
+    transform: scale(0.9);
+}
+
+.otpInput{
+    width: 100% !important;
+    border: none !important;
+    font-size: 22px !important;
+    color: rgba(0, 0, 0, 0.6);
+    margin: 0px !important;
+}
+
+.otpVerify{
+    width: 20%;
+    border: 1px solid rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
+    height: 40px;
+    padding: 0px 10px;
+}
+
+.filterItem div:first-child span small{
+    /* color: rgb(39, 201, 63); */
+    font-weight: 500;
+}
 
